this is canva certificates

--- a/index.html
+++ b/index.html
@@ -503,7 +503,8 @@
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href=></a></h3>
-                <p></p>
+					<img src="images/canva.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                <p> Certified in Canva with expertise in designing creative content such as logos, resumes, infographics, and digital marketing materials. Developed strong visual storytelling and presentation design skills.</p>
               </div>
             </div>
           </div>
