--- a/index.html
+++ b/index.html
@@ -497,7 +497,9 @@
         </div>
 		<img src="images/canva.jpg" class="img-fluid rounded b-shadow-a" alt="">
 		 <p> Certified in Canva with expertise in designing creative content such as logos, resumes, infographics, and digital marketing materials. Developed strong visual storytelling and presentation design skills.</p>
-        <div class="row d-flex">
+       <img src="images/wisdome eye.jpg" class="img-fluid rounded b-shadow-a" alt="">
+	   <p> Successfully completed an eight-session certification program aimed at self-discovery and  holistic growth. The course emphasized self-awareness, mindfulness, and inner strength while also developing communication, confidence, and leadership qualities. Learned how to balance personal values with professional goals through reflective practices and spiritual insights. Enhanced emotional intelligence, problem-solving ability, and positive thinking. Achieved excellent performance in assessments by demonstrating both discipline and creativity. This program inspired personal transformation, building resilience and a purposeful outlook towards academic, professional, and life challenges.</p>
+		 <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
               <a href= class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
