--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="#">resumelink</a></p>
+	            <p><a href="https://drive.google.com/file/d/1dSZbJZruMvNa-B9-d0YMkLuhKnU8Df5v/view?usp=drivesdk">resumelink</a></p>
 	          </div>
           </div>
 
